--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,8 @@ of equiv assumptions in CryptoVerif.
 instructions should return a unary tuple.
 - insert: allow referring to replication indices.
 - Fixed probability for IND-CCA2 public-key encryption.
+- Fixed bug in probability computation that could lead to a useless
+repetition of replication bounds in products.
 - Fixed a counting bug, which could lead to counting several times
 the same oracle call occurring at several places in a game, in the
 presence of equational theories.
