--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,9 @@ of equiv assumptions in CryptoVerif.
 - query_equiv: fixed a bug in the oracle front-end, return
 instructions should return a unary tuple.
 - insert: allow referring to replication indices.
+- implementation: generate separate OCaml functions for letfun
+declarations.
+- implementation: fixed a missing space after begin.
 - Fixed probability for IND-CCA2 public-key encryption.
 - Fixed bug in probability computation that could lead to a useless
 repetition of replication bounds in products.
