--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,7 @@ instructions should return a unary tuple.
 - insert: allow referring to replication indices.
 - implementation: generate separate OCaml functions for letfun
 declarations.
+- implementation: optimized treatment of get.
 - implementation: fixed a missing space after begin.
 - Fixed probability for IND-CCA2 public-key encryption.
 - Fixed bug in probability computation that could lead to a useless
