--- a/CHANGES
+++ b/CHANGES
@@ -19,6 +19,7 @@ declarations.
 - implementation: make sure the init function of each module
 is called at most once.
 - implementation: fixed a missing space after begin.
+- Display occurrences of changes even when old games are forgotten.
 - Fixed probability for IND-CCA2 public-key encryption.
 - Fixed bug in probability computation that could lead to a useless
 repetition of replication bounds in products.
