Fixed [useful_change] annotations in the definitions of MACs

--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@ is called at most once.
 - implementation: fixed a missing space after begin.
 - Display occurrences of changes even when old games are forgotten.
 - Fixed probability for IND-CCA2 public-key encryption.
+- Fixed [useful_change] annotations in the definitions of MACs.
 - Fixed bug in probability computation that could lead to a useless
 repetition of replication bounds in products.
 - Fixed a counting bug, which could lead to counting several times
