--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 This file summarizes the most important changes between versions
 of the cryptographic protocol verifier.
 
+Version
+
+- Allow multiple command-line options "-lib <file>"
+
 Version 2.04
 
 - Allow using #O for the total number of calls to oracle O
