--- a/CHANGES
+++ b/CHANGES
@@ -3,8 +3,11 @@ of the cryptographic protocol verifier.
 
 Version
 
-- Allow multiple command-line options "-lib <file>"
-- Fixed bug in computation of indices in crypto transformation
+- Allow comparisons between indices in the right-hand side of
+equiv declarations.
+- Allow multiple command-line options "-lib <file>".
+- Minor improvement of some error messages.
+- Fixed bug in computation of indices in crypto transformation.
 
 Version 2.04
 
