allow insert/get in RHS of equiv + related changes
Merge of branch 2021.01.tables_in_RHS_of_equiv

- allow insert/get in RHS of equiv
- use that in IND-CCA2 public-key encryption, DDH, and PRF-ODH
- remove useless assignments in RHS of equiv, after transforming insert/get into find
- remove duplicate elements in def_list, introduced by removal of assignments
- support empty defined condition in RHS of equiv
- fixed bug: put_defined_cond_* must support non-expanded games
- fixed bug: in transf_crypto, apply update_def_list_simplif also to terms

--- a/CHANGES
+++ b/CHANGES
@@ -3,11 +3,18 @@ of the cryptographic protocol verifier.
 
 Version
 
-- Allow comparisons between indices in the right-hand side of
-equiv declarations.
+- Allow comparisons between indices and tables (insert, get)
+in the right-hand side of equiv declarations.
+- Optimize the right-hand side of equiv declarations by removing
+useless assignments.
 - Allow multiple command-line options "-lib <file>".
 - Minor improvement of some error messages.
+- Avoid creating duplicate defined conditions in transformation
+remove_assign.
 - Fixed bug in computation of indices in crypto transformation.
+- Fixed bug in update of defined conditions following other
+rewritings of the game: it supported only expanded games, but
+was sometimes called on non-expanded games.
 
 Version 2.04
 
